--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "gulp-sourcemaps": "2.6.x",
     "gulp-svgstore": "^7.0.1",
     "gulp-uglify": "^3.0.2",
+    "gulp-uglify-es": "^2.0.0",
     "gulp-webp": "^4.0.1",
     "pixel-glass": "^1.0.13",
     "posthtml-include": "^1.4.3",
@@ -50,7 +51,9 @@
     "node": "8.16"
   },
   "dependencies": {
+    "babel-preset-es2015": "^6.24.1",
     "del": "^5.1.0",
+    "gulp-babel": "^8.0.0",
     "readable-stream": "^3.6.0"
   }
 }
